# codex

./: MODULE.bazel
.github/workflows/: bazel.yml  ci.yml  rust-ci.yml
codex-rs/: Cargo.toml
codex-rs/app-server-protocol/schema/json/: codex_app_server_protocol.schemas.json
codex-rs/app-server-protocol/schema/json/v2/: ConfigReadResponse.json
codex-rs/app-server-protocol/src/protocol/: v2.rs
codex-rs/app-server/src/: message_processor.rs
codex-rs/codex-api/src/: lib.rs
codex-rs/codex-api/src/endpoint/: chat.rs  mod.rs
codex-rs/codex-api/src/requests/: chat.rs  mod.rs
codex-rs/codex-api/src/sse/: chat.rs
codex-rs/codex-api/tests/: clients.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: client.rs  client_tests.rs  codex.rs  github_copilot_auth.rs  lib.rs  model_provider_info.rs  model_provider_info_tests.rs  stream_events_utils.rs  thread_manager.rs
codex-rs/core/src/agent/: control.rs
codex-rs/core/src/config/: config_tests.rs  mod.rs
codex-rs/core/src/models_manager/: manager.rs  model_info.rs
codex-rs/core/src/rlm/: llm_query_callback.rs  mod.rs  monty_repl.rs  subagent.rs
codex-rs/core/src/tools/: spec.rs
codex-rs/core/tests/suite/: client.rs  items.rs  prompt_caching.rs
codex-rs/exec/src/: lib.rs
codex-rs/mcp-server/src/: message_processor.rs
codex-rs/provider-auth-cli/: BUILD.bazel  Cargo.toml
codex-rs/provider-auth-cli/src/: main.rs
codex-rs/scripts/: run-debug-codex.sh
codex-rs/tui/src/: app.rs  chatwidget.rs
codex-rs/tui/src/chatwidget/: tests.rs
docs/: config.md  python_repl.md
(+5 files in other folders)
