[package]
name = "codex-provider-auth-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-provider-auth"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
codex-core = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
